// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Portfolio position with missing ticker 1`] = `
<WithStyles(class_1)
  cardContent={
    <React.Fragment>
      <div
        className="Component-avatar-1"
      >
        <WithStyles(Component)
          asset="ETH"
          coinlist={Object {}}
        />
      </div>
      <div
        className="Component-content-2"
      >
        <WithStyles(Grid)
          container={true}
        >
          <WithStyles(Grid)
            item={true}
            xs={4}
          >
            <div>
              <WithStyles(Typography)
                color="default"
                component="span"
                variant="body2"
              >
                ETH
              </WithStyles(Typography)>
              <WithStyles(Typography)
                color="textSecondary"
                component="span"
                variant="body2"
              >
                10.000
              </WithStyles(Typography)>
            </div>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            className="Component-right-3"
            item={true}
            xs={3}
          >
            
          </WithStyles(Grid)>
          <WithStyles(Grid)
            className="Component-right-3"
            item={true}
            xs={3}
          >
            
          </WithStyles(Grid)>
          <WithStyles(Grid)
            className="Component-right-3"
            item={true}
            xs={2}
          >
            
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </div>
    </React.Fragment>
  }
  collapseContent={
    <Connect(WithTheme(class_1))
      fsym="ETH"
      tsym="USD"
    />
  }
/>
`;

exports[`Render portfolio position 1`] = `
<WithStyles(class_1)
  cardContent={
    <React.Fragment>
      <div
        className="Component-avatar-1"
      >
        <WithStyles(Component)
          asset="ETH"
          coinlist={Object {}}
        />
      </div>
      <div
        className="Component-content-2"
      >
        <WithStyles(Grid)
          container={true}
        >
          <WithStyles(Grid)
            item={true}
            xs={4}
          >
            <div>
              <WithStyles(Typography)
                color="default"
                component="span"
                variant="body2"
              >
                ETH
              </WithStyles(Typography)>
              <WithStyles(Typography)
                color="textSecondary"
                component="span"
                variant="body2"
              >
                10.000
              </WithStyles(Typography)>
            </div>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            className="Component-right-3"
            item={true}
            xs={3}
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": "100%",
                  "justifyContent": "flex-end",
                }
              }
            >
              <WithStyles(Typography)
                color="default"
                component="span"
                style={
                  Object {
                    "padding": "auto",
                  }
                }
                variant="subheading"
              >
                10,000.00 USD
              </WithStyles(Typography)>
              
            </div>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            className="Component-right-3"
            item={true}
            xs={3}
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": "100%",
                  "justifyContent": "flex-end",
                }
              }
            >
              <WithStyles(Typography)
                color="default"
                component="span"
                style={
                  Object {
                    "padding": "auto",
                  }
                }
                variant="subheading"
              >
                1,000.00 USD
              </WithStyles(Typography)>
              
            </div>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            className="Component-right-3"
            item={true}
            xs={2}
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": "100%",
                  "justifyContent": "flex-end",
                }
              }
            >
              <WithStyles(Typography)
                color="default"
                component="span"
                style={
                  Object {
                    "padding": "auto",
                  }
                }
                variant="subheading"
              >
                <WithStyles(Component)
                  change={5.2}
                  muted={false}
                />
              </WithStyles(Typography)>
              
            </div>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </div>
    </React.Fragment>
  }
  collapseContent={
    <Connect(WithTheme(class_1))
      fsym="ETH"
      tsym="USD"
    />
  }
/>
`;
